# local-invoice-parser

./: .gitignore  README.md  exp1_ocr_ner.py  exp2_vlm.py  pyproject.toml  schema.py
data/sample-invoices/: ground_truth.json
local-invoice-parser/: eval.py  pipeline.py  runtime.py
local-invoice-parser/experiments/: __init__.py  base.py  catalog.py  exp1_paddleocr_gliner2ner.py  exp2_paddleocr_qwen3ner.py  exp3_vlm_qwen25vl.py  exp4_vlm_minicpm.py  registry.py
local-invoice-parser/models/: __init__.py  modelbackend.py  prompting.py  utils.py
local-invoice-parser/models/ner/: __init__.py  gliner2.py  llama_server.py  qwen3.py
local-invoice-parser/models/ocr/: __init__.py  paddle.py
local-invoice-parser/models/vlm/: __init__.py  llama_mtmd_cli.py  llama_server.py  llamacpp.py  minicpmv.py  qwen25vl.py
local-invoice-parser/pipeline/: ocr_ner.py  vlm.py
local-invoice-parser/pipelines/: ocr_ner.py  pipeline.py  vlm.py
ner/: __init__.py  common.py  gliner2.py  qwen3.py
scripts/: eval.py  serve_minicpmv.sh  serve_qwen25vl.sh  serve_qwen3.sh
vlm/: __init__.py  common.py  llamacpp.py  minicpmv.py  qwen25vl.py
